Small spacing and newline changes for venue search. Fix no bullets for show results. Actually center spinner, not center top left corner

--- a/client/src/SpotifySearch.css
+++ b/client/src/SpotifySearch.css
@@ -68,7 +68,7 @@ select {
 }
 
 .loader {
-  position: absolute;
+  position: fixed;
   left: 50%;
   top: 50%;
   border: 10px solid #f3f3f3; /* Light grey */
@@ -96,10 +96,10 @@ select {
 
 @keyframes spin {
   0% {
-    transform: rotate(0deg);
+    transform: translate(-50%, -50%) rotate(0deg);
   }
   100% {
-    transform: rotate(360deg);
+    transform: translate(-50%, -50%) rotate(360deg);
   }
 }
 
@@ -128,7 +128,7 @@ select {
 }
 
 ul {
-  list-style: none;
+  list-style-type: none;
   padding: 0;
   margin: 0;
 }
